1.file handling in python added on based on input open method-21-oct-18

2.checking objects inside the folder is file or dir based on os module21-0ct-18

3.checking file extension based on string endswith method
4.Examples of list handling with extend,reverse,copy,pop -22-oct-18

 #23-oct-18
5.#list handling new functions added clear,count,index,insert,remove -
6.#sort need to implement,