@@ -7,4 +7,5 @@ This is my Experimentals samples
 3.list the directory and checking the object is file or directory
 
 4.List data type practical examples 
+5.Fetching contents of the site using request module
 
